--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="register_text">Don\'t have an account? <font color="#9C9C9C">Register now</font></string>
     <string name="terms_text">By signing up, you agree with our <font color="#9C9C9C">Terms and Conditions</font></string>
     <string name="logo">Logo</string>
-    <string name="learn_more">Helping movie lovers stay one step ahead, one showtime at a time</string>
+    <string name="learn_more">Helping movie lovers explore films and cinemas with ease</string>
     <string name="email_address">Email Address</string>
     <string name="password">Password</string>
     <string name="confirm_password">Confirm Password</string>
